# django_pro

./: Dockerfile  docker-compose.yml  pyproject.toml
accounts/: tests.py  views.py
accounts/migrations/: 0001_initial.py
books/: admin.py  models.py  tests.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_alter_book_id_review.py  0003_book_cover_alter_book_id.py  0004_alter_book_options_alter_book_id.py  0005_alter_book_id_book_id_index.py  0006_alter_book_id.py
config/: settings.py  urls.py
pages/: tests.py
staticfiles/js/: base.js
templates/: _base.html  about.html  home.html
templates/account/: email_confirm.html  login.html  logout.html  signup.html
templates/account/email/: email_confirmation_message.txt  email_confirmation_subject.txt
templates/books/: book_detail.html  book_list.html  search_results.html
templates/registration/: login.html  signup.html
