[tool.poetry]
name = "books"
version = "0.1.0"
description = ""
authors = ["Anton Mindlin <anton.mindlin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
psycopg2-binary = "^2.9.6"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
django-allauth = "^0.54.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
